ARM: dts: dra7: Add ti-sysc node for VPE
Add VPE node as a child of l4 interconnect in order for it to probe
using ti-sysc.

Remove the existing VPE hwmod and dra7.dtsi node.

Signed-off-by: Benoit Parrot <bparrot@ti.com>

--- a/arch/arm/boot/dts/dra7xx-clocks.dtsi
+++ b/arch/arm/boot/dts/dra7xx-clocks.dtsi
@@ -1601,6 +1601,12 @@
 			reg = <0x20 0x28>;
 			#clock-cells = <2>;
 		};
+
+		vpe_clkctrl: vpe-clkctrl@60 {
+			compatible = "ti,clkctrl";
+			reg = <0x60 0xc>;
+			#clock-cells = <2>;
+		};
 	};
 
 };
